--- a/book.bib
+++ b/book.bib
@@ -208,6 +208,21 @@
   url             = {http://journals.sagepub.com/doi/10.1177/0146167206287721},
 }
 
+
+@article{Dakos2008,
+  author = {Dakos, Vasilis and Scheffer, Marten and van Nes, Egbert H and Brovkin, Victor and Petoukhov, Vladimir and Held, Hermann},
+  doi = {10.1073/pnas.0802430105},
+  issn = {0027-8424},
+  journal = {Proceedings of the National Academy of Sciences of the United States of America},
+  number = {38},
+  pages = {14308--14312},
+  title = {{Slowing down as an early warning signal for abrupt climate change. TL  - 105}},
+  url = {http://dx.doi.org/10.1073/pnas.0802430105},
+ volume = {105 VN - }, 
+  year = {2008}
+}
+
+
 @Book{Derogatis1994,
   title     = {{Symptom Checklist-90-R (SCL-90-R): Administration, scoring, and procedures manual}},
   publisher = {Minneapolis, MN: NCS Pearson},
@@ -457,6 +472,22 @@
   url     = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0893-164X.16.3.205},
 }
 
+@article{Jacobson1991,
+  author = {Jacobson, Neil S. and Truax, Paula},
+  doi = {10.1037/0022-006X.59.1.12},
+  isbn = {1939-2117(Electronic);0022-006X(Print)},
+  issn = {1939-2117},
+  journal = {Journal of Consulting and Clinical Psychology},
+  number = {1},
+  pages = {12--19},
+  pmid = {2002127},
+  title = {{Clinical significance: A statistical approach to defining meaningful change in psychotherapy research.}},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-006X.59.1.12},
+  volume = {59},
+  year = {1991}
+}
+
+
 @InCollection{Kirchner2013,
   author    = {Kirchner, Thomas R. and Shiffman, Saul},
   title     = {{Ecological Momentary Assessment}},
@@ -469,6 +500,18 @@
   issn      = {1548-5943},
   keywords  = {EMA sampling design,EMA-based treatment,Ecological Momentary Assessment (EMA),Ecological momentary intervention (EMI),Substance abuse research},
   pmid      = {18509902},
+}
+
+@article{Kleiboer2016,
+  author = {Kleiboer, A. and Smit, J. and Bosmans, J. and Ruwaard, J. and Andersson, G. and Topooco, N. and Berger, T. and Krieger, T. and Botella, C. and Ba{\~{n}}os, R. and Chevreul, K. and Araya, R. and Cerga-Pashoja, A. and Cie{\'{s}}lak, R. and Rogala, A. and Vis, C. and Draisma, S. and Schaik, A. and Kemmeren, L. and Ebert, D. and Berking, M. and Funk, B. and Cuijpers, P. and Riper, H.},
+  doi = {10.1186/s13063-016-1511-1},
+  issn = {17456215},
+  journal = {Trials},
+  keywords = {Adults,Blended treatment,Cognitive behavioral treatment (CBT),Comparative effectiveness research (CER),Cost-effectiveness,Depression,EHealth,ICBT,Internet-based treatment,Randomized controlled trial (RCT)},
+  number = {1},
+  title = {{European COMPARative Effectiveness research on blended Depression treatment versus treatment-as-usual (E-COMPARED): Study protocol for a randomized controlled, non-inferiority trial in eight European countries}},
+  volume = {17},
+  year = {2016}
 }
 
 @Article{Kossakowski2017,
@@ -486,6 +529,22 @@
   publisher       = {Ubiquity Press},
   url             = {http://openpsychologydata.metajnl.com/articles/10.5334/jopd.29/},
 }
+
+@article{Kroenke2009,
+  author = {Kroenke, Kurt and Strine, Tara W. and Spitzer, Robert L. and Williams, Janet B.W. and Berry, Joyce T. and Mokdad, Ali H.},
+  doi = {10.1016/j.jad.2008.06.026},
+  isbn = {0165-0327},
+  issn = {01650327},
+  journal = {Journal of Affective Disorders},
+  keywords = {Depression,Epidemiology,Patient Health Questionnaire,Prevalence,Psychometrics,Quality of life},
+  number = {1-3},
+  pages = {163--173},
+  pmid = {18752852},
+  title = {{The PHQ-8 as a measure of current depression in the general population}},
+  volume = {114},
+  year = {2009}
+}
+
 
 @InCollection{Larson1983,
   author    = {Larson, R and Csikszentmihalyi, M},
