add watson 1999 to refs

--- a/book.bib
+++ b/book.bib
@@ -892,6 +892,13 @@
   publisher = {American Psychological Association},
 }
 
+@article{Watson1999,
+author = {Watson, David},
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Tellegen{\_}1994.pdf:pdf},
+title = {{The PANAS-X : Manual for the Positive and Negative Affect Schedule - Expanded Form}},
+year = {1999}
+}
+
 @Article{Wenze2010,
   author   = {Wenze, Susan J. and Miller, Ivan W.},
   title    = {{Use of ecological momentary assessment in mood disorders research.}},
