--- a/book.bib
+++ b/book.bib
@@ -913,6 +913,17 @@
   url       = {http://dx.doi.org/10.1016/j.psychres.2014.06.052},
 }
 
+@Book{Venables2002,
+    title = {Modern Applied Statistics with S},
+    author = {W. N. Venables and B. D. Ripley},
+    publisher = {Springer},
+    edition = {Fourth},
+    address = {New York},
+    year = {2002},
+    note = {ISBN 0-387-95457-0},
+    url = {http://www.stats.ox.ac.uk/pub/MASS4},
+  }
+
 @Article{Walz2014,
   author  = {Walz, Laura C. and Nauta, Maaike H. and aan het Rot, Marije},
   title   = {{Experience sampling and ecological momentary assessment for studying the daily lives of patients with anxiety disorders: A systematic review}},
