--- a/part3/07_lmm.Rmd
+++ b/part3/07_lmm.Rmd
@@ -1,101 +1,109 @@
 # Mixed Modeling {#lmm}
 
+EMA data are complex. Multiple assessments are made on each participant. Correlations between measures from the same participant need to be accounted for. Individual differences need to be assessed. Missing values are abundant. Time-points are continuous. Linear mixed models are well-suited to deal with these data.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
+## The Mixed Model
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.
+Mixed models are multi-level models. With EMA data, repeated measures are at level 1, and these repeated measures are clustered within individuals, at level 2.
 
-## Section
+At level 1, the outcome at time j for individual j, is explained by an intercept and a time-parameter:
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
+\begin{equation} 
+  Y_{ij} = intercept_{i} + \beta_{time, i} time_{ij} + \epsilon_{ij} 
+\end{equation} 
+
+At level 2, differences between individuals are modelled.
+
+\begin{equation} 
+  intercept_{i} = intercept_{0} + \mu_{intercept, i} \\
+  \beta_{time, i} = gamma_{time, 0} + gamma_{time, i} + \mu_{time, i} 
+\end{equation} 
+
+Full model:
+
+\begin{equation} 
+  mood_{ij} = intercept_{0} + \mu_{intercept, i} + (gamma_{time, 0} + Group + gamma_{time, i} + \mu_{time, i}) Time_{ij} + \epsilon_{ij}
+\end{equation}
 
 
-```{r nlme}
-# library(nlme)
-# 
-d <- subset(caspar, substr(item, 1, 3) == "PHQ")
-d <- d %>% group_by(id) %>%
-  mutate(t = difftime(timestamp, timestamp[1], units = "days")) %>%
-  mutate(t = as.numeric(t)) %>%
-  mutate(t = round(t, 2))
+Autocorrelation (PHI)
 
-fm1 <- nlme::lme(score ~ t, data = d, random = ~ 1 | id)
-summary(fm1)
+## Example data
+
+Suppose we conduct a 10-day EMA study among 15 patients, who are in treatment for depression. Participants are asked to complete a standard EMA mood item (on a 0 to 10 mood scale), three times a day.
+
+```{r fig7a, out.width = "100%", fig.asp = .75, warning = FALSE, message = FALSE}
+library(emaph)
+library(ggplot2)
+
+plan <- sample_plan(n_participants = 16, 
+                    n_days = 10,
+                    times = c("10:00-11:00", 
+                              "13:00-14:00", 
+                              "16:00-18:00"))
+
+d <- sim_ema(plan, 
+             mm_par = list(fixed  = c(intercept = 5, time = .1),
+                           random = c(intercept = 0.1, time = .025),
+                           error = .5, phi = .5),
+             lim = c(0, 10))
+
+ggplot(d, aes(x = time, y = Y, group = id)) + 
+  geom_line(size = 1.1) + ylim(c(0, 10)) + 
+  facet_wrap(~id) + theme_bw()
 ```
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.
+## Fitting a mixed model in R
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta.  
+There are several options to fit a mixed model in R. Two popular packages are 'nlme' and 'lme4'. Package 'lme4' is preferred by many, because it is a more efficient implementation 'nlme'. Package 'nlme', however, is still frequently used, however, because it allows for more options to model correlational structures (including the autocorrelation of errors). We will therefore use package 'nlme'. 
 
-##  ICC
+```{r cs7a}
+# code snippet 7.1: fitting a mixed model with lme
+library(nlme)
+fm <- lme(Y ~ 1 + time, random = ~ 1 + time | id, 
+          correlation = corAR1(), data = d)
+```
+
+We can now extract the test of the fixed effects:
+
+```{r cs7b}
+# code snippet 7.2: extracting fixed effects
+summary(fm)$tTable
+```
+
+Random effects:
+
+```{r cs7c}
+# code snippet 7.3: extracting fixed effects
+VarCorr(fm)
+```
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at
-laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc
-ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus condimentum.
-Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel, tristique
-pellentesque arcu. Vestibulum id laoreet neque.
+vehicula augue metus, in tincidunt urna luctus sit amet.
 
-```{r}
+```{r cs7d}
+# code snippet 7.4: intraclass correlation
 ICC <- function(fittedModel) {
   variance <- nlme::VarCorr(fittedModel)
-  var_between <- as.numeric(variance[1:(nrow(variance)-1)])
+  var_between <- as.numeric(variance[1:(nrow(variance) - 1)])
   var_total <- as.numeric(variance[1:nrow(variance)])
-  sum(var_between)/sum(var_total)
+  sum(var_between) / sum(var_total)
 }
-ICC(fm1)
+ICC(fm)
 ```
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit cursus
-eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada
-fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec,
-lobortis imperdiet diam.
+Plotting the predicted values:
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at
-laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc
-ac tellus nec tortor interdum porta. 
+```{r fig7b, out.width = "100%", fig.asp = 0.4}
+d$predY <- predict(fm)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
+ggplot(d, aes(x = time, y = predY, group = id)) + 
+  geom_line() + ylim(c(0, 10))
+```
 
 
-## Section
+
+## Two groups
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
