--- a/book.bib
+++ b/book.bib
@@ -380,7 +380,7 @@
 
 @article{Epskamp2018c,
   author = {Epskamp, Sacha and Fried, Eiko I.},
-  booktitle = {Psychological Methods},
+  journal = {Psychological Methods},
   doi = {10.1037/met0000167},
   eprint = {1607.01367},
   isbn = {1-55752-778-4},
@@ -1020,11 +1020,10 @@ year = {1988}
   publisher = {American Psychological Association},
 }
 
-@article{Watson1999,
-author = {Watson, David},
-file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Tellegen{\_}1994.pdf:pdf},
-title = {{The PANAS-X : Manual for the Positive and Negative Affect Schedule - Expanded Form}},
-year = {1999}
+@book{Watson1999,
+  author = {Watson, David},
+  title = {{The PANAS-X : Manual for the Positive and Negative Affect Schedule - Expanded Form}},
+  year = {1999}
 }
 
 @Article{Wenze2010,
