--- a/book.bib
+++ b/book.bib
@@ -861,7 +861,7 @@ year = {1999}
   publisher = {Cambridge University Press ({CUP})},
 }
 
-@article{thompson2007,
+@article{Thompson2007,
   title={Development and validation of an internationally reliable short-form of the positive and negative affect schedule (PANAS)},
   author={Thompson, Edmund R},
   journal={Journal of cross-cultural psychology},
