--- a/part4/10_mood.Rmd
+++ b/part4/10_mood.Rmd
@@ -35,7 +35,7 @@ Another option is to use bipolar-unidimensional items, which place two opposing 
 
 ## The Circumplex Model
 \index{Circumplex model}
-The Circumplex Model of affect [@russell1980circumplex; @Posner2005] also uses a bipolar dimensional scale to rate affect (ranging from unpleasant to pleasant). However, the model assumes that affective states are a linear combination of two independent underlying constructs, rather than one. Therefore, all states are scored both on a valence scale and an arousal scale (ranging from low to high arousal). Combining these scores places the affective states in a circle on one of four quadrants (\@ref(fig:fig10b)). States within one quadrant are believed to be positively correlated, while states in the opposing quadrant are thought to be negatively correlated. 
+The Circumplex Model of affect [@russell1980circumplex; @Posner2005] also uses a bipolar dimensional scale to rate affect (ranging from unpleasant to pleasant). However, the model assumes that affective states are a linear combination of two independent underlying constructs, rather than one. Therefore, all states are scored both on a valence scale and an arousal scale (ranging from low to high arousal). Combining these scores places the affective states in a circle on one of four quadrants (\@ref(fig:fig10d)). States within one quadrant are believed to be positively correlated, while states in the opposing quadrant are thought to be negatively correlated. 
 When using this model in EMA research, one option is to have respondents rate valence and arousal on two VAS scales. The combination of the resulting scores than gives insight into the quadrant in which respondents affective states fall (\@ref(fig:fig10d))
 - Low aroused - unpleasant
 - Low aroused - pleasant
@@ -105,3 +105,4 @@ Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
 Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat purus nec, lobortis imperdiet diam. Donec sed lectus at sem ultrices commodo.
 
 Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id consequat nibh.
+
